src/objects/FourPlanning_Solucion__c.object
<CustomObject>
    <fields>
        <fullName>Competidor__c</fullName>
        <label>Competidor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lista_de_Soluciones__c</fullName>
        <label>Lista de Soluciones</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comunicaciones Fijas</fullName>
                </value>
                <value>
                    <fullName>Comunicaciones Móviles</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>IoT</fullName>
                </value>
                <value>
                    <fullName>Seguridad</fullName>
                </value>
                <value>
                    <fullName>Big Data</fullName>
                </value>
                <value>
                    <fullName>Soluciones Sectoriales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nivel_de_Desarrollo__c</fullName>
        <label>Nivel de Desarrollo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disponible</fullName>
                </value>
                <value>
                    <fullName>En Desarrollo</fullName>
                </value>
                <value>
                    <fullName>No Disponible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Observaci_n_sobre_el_producto__c</fullName>
        <label>Observación sobre el producto</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Otra_Solucion__c</fullName>
        <label>Otra Solucion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reto__c</fullName>
        <label>FourPlanning Reto</label>
        <referenceTo>FourPlanning_Reto__c</referenceTo>
        <relationshipLabel>FourPlanning Soluciones</relationshipLabel>
        <relationshipName>FourPlanning_Soluciones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SubcategoriaSolucion__c</fullName>
        <label>SubcategoriaSolucion</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lista_de_Soluciones__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Voz</fullName>
                </value>
                <value>
                    <fullName>Red de Datos (WAN, Fibra, MPLS, etc.)</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Servicio de Red inteligente (0800, 900, etc.)</fullName>
                </value>
                <value>
                    <fullName>Datos</fullName>
                </value>
                <value>
                    <fullName>Terminales</fullName>
                </value>
                <value>
                    <fullName>SVA (MDM, SMS, etc)</fullName>
                </value>
                <value>
                    <fullName>Call/Contact Center</fullName>
                </value>
                <value>
                    <fullName>Outsourcing</fullName>
                </value>
                <value>
                    <fullName>Comunicaciones Unificadas</fullName>
                </value>
                <value>
                    <fullName>Videoconferencia (telepresencia, webconference, etc)</fullName>
                </value>
                <value>
                    <fullName>Atención Ciudadana / 911</fullName>
                </value>
                <value>
                    <fullName>Digitalización y Gestión Documental</fullName>
                </value>
                <value>
                    <fullName>Educación Digital</fullName>
                </value>
                <value>
                    <fullName>E-learning</fullName>
                </value>
                <value>
                    <fullName>Mesas de Dinero y Grabación</fullName>
                </value>
                <value>
                    <fullName>Puesto de Trabajo</fullName>
                </value>
                <value>
                    <fullName>Seguridad Ciudadana</fullName>
                </value>
                <value>
                    <fullName>Videovigilancia y Seguridad Perimetral</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Go to Cloud (migración a Servidores Virtuales, VDC, OpenCloud, SAP Gestionado, Office 365)</fullName>
                </value>
                <value>
                    <fullName>Cloud Hibrida (Servicios gestionados, Multicloud)</fullName>
                </value>
                <value>
                    <fullName>Consolidación de Datacenter (Hosting, Housing, HW y SW Reselling)</fullName>
                </value>
                <value>
                    <fullName>Conectividad Gestionada (M2M, alarmas, contadores, silos, barcos, POS, contenedores, ascensores..)</fullName>
                </value>
                <value>
                    <fullName>Gestión de empleados (geogestión)</fullName>
                </value>
                <value>
                    <fullName>Gestión de flotas (asset Traking, GPS, etc)</fullName>
                </value>
                <value>
                    <fullName>Eficiencia energética</fullName>
                </value>
                <value>
                    <fullName>Marketing Dinámico / On The Spot / Cartelería Digital</fullName>
                </value>
                <value>
                    <fullName>Big Data (Infraestructura, Servicios, Consultoría, Synergic Partnert)</fullName>
                </value>
                <value>
                    <fullName>Smart Steps (transito, audiencia, store, turismo)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FourPlanning Solucion</label>
    <nameField>
        <label>Nombre de FourPlanning Solucion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FourPlanning Soluciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>